--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,71 +1,103 @@
+/* ----- general body styles -----  */
+
 body {
+	/* typography */
 	font-family: "Open Sans", sans-serif;
 	font-size: 16px;
 	line-height: 1;
 }
 
 textarea {
-	background: transparent;
+	/* box model */
 	border: none;
-	resize: none;
-	color: #000000;
 	border-left: 1px solid black;
 	padding: 10px;
+
+	/* visual decorations */
+	background: transparent;
+	resize: none;
+	color: #000000;
 }
 
+/* ----- header styles ----- */
+
 .jumbotron {
+	/* box model */
+	border-bottom: 10px solid black;
+	border-radius: 0;
+
+	/* typography */
 	text-align: center;
+
+	/* visual decorations */
 	background-color: transparent;
 	color: black;
-	border-radius: 0;
-	border-bottom: 10px solid black;
 }
 
 .description {
+	/* box model */
 	white-space: pre-wrap;
 }
 
 .time-block {
-	text-align: center;
+	/* box model */
 	border-radius: 15px;
+
+	/* typography */
+	text-align: center;
 }
 
+/* ----- calendar styles ----- */
+
 .row {
-	white-space: pre-wrap;
-	height: 80px;
+	/* box model */
 	border-top: 1px solid white;
+	height: 80px;
+	white-space: pre-wrap;
 }
 
 .hour {
+	/* box model */
+	border-top: 1px dashed #000000;
+
+	/* visual decorations */
 	background-color: #ffffff;
 	color: #000000;
-	border-top: 1px dashed #000000;
 }
 
 .past {
+	/* visual decorations */
 	background-color: #d3d3d3;
 	color: white;
 }
 
 .present {
+	/* visual decorations */
 	background-color: #ff6961;
 	color: white;
 }
 
 .future {
+	/* visual decorations */
 	background-color: #77dd77;
 	color: white;
 }
 
 .saveBtn {
+	/* box model */
 	border-left: 1px solid black;
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
+
+	/* visual decorations */
 	background-color: #06aed5;
 	color: white;
 }
 
 .saveBtn i:hover {
+	/* typography */
 	font-size: 20px;
+
+	/* visual decorations */
 	transition: all 0.3s ease-in-out;
 }
