--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+* {
+	/* box model */
+	box-sizing: border-box;
+	margin: 0;
+}
+
 /* ----- general body styles -----  */
 
 body {
@@ -63,6 +69,9 @@ textarea {
 }
 
 h3 {
+	/* box model */
+	margin: 0;
+
 	/* typography */
 	font-size: 1.2rem;
 }
