--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,12 @@ body {
 }
 
 .jumbotron p {
+	/* box model */
+	overflow: visible;
+
+	/* typography */
+	font-size: 1.3rem;
+
 	/* visual decorations */
 	color: white;
 }
@@ -44,7 +50,9 @@ body {
 
 .row {
 	/* box model */
-	border-top: 1px solid white;
+	border: 1px solid black;
+	border-radius: 15px;
+	box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.2), 0 6px 30px 0 rgba(0, 0, 0, 0.19);
 	height: 80px;
 	margin: 5px 0;
 	white-space: pre-wrap;
@@ -54,11 +62,12 @@ body {
 .hour {
 	/* box model */
 	align-items: center;
-	border: 1px dashed black;
+	border-right: 1px solid black;
 	border-top-left-radius: 15px;
 	border-bottom-left-radius: 15px;
 	display: flex;
 	height: 100%;
+	justify-content: center;
 
 	/* visual decorations */
 	background-color: #ffffff;
@@ -133,23 +142,24 @@ textarea {
 .saveBtn {
 	/* box model */
 	align-items: center;
+	border-left: 1px solid black;
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
 	display: flex;
 	justify-content: center;
 
 	/* typography */
-	font-size: 1.3rem;
+	font-size: 1.5rem;
 
 	/* visual decorations */
 	background-color: #06aed5;
 	color: white;
+	transition: all 0.3s ease-in-out;
 }
 
-.saveBtn i:hover {
-	/* typography */
-	font-size: 20px;
-
+.saveBtn:hover {
 	/* visual decorations */
+	background-color: #048baa;
+	cursor: pointer;
 	transition: all 0.3s ease-in-out;
 }
